4 Talks + 1 Lightning Talk instead of 5 full talks

--- a/index.html
+++ b/index.html
@@ -130,14 +130,10 @@
             <div class="timings">
                 <div class="row">
                     <div class="small-4 columns"><h6>5.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Registration</h6></div>
-                </div>
-                <div class="row">
-                    <div class="small-4 columns"><h6>5.30 pm</h6></div>
-                    <div class="small-8 columns"><h6>Welcome Note</h6></div>
+                    <div class="small-8 columns"><h6>Introduction</h6></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>5.45 pm</h6></div>
+                    <div class="small-4 columns"><h6>5.30 pm</h6></div>
                     <div class="small-8 columns"><h6>Session 1</h6></div>
                 </div>
                 <div class="row talk">
@@ -145,23 +141,23 @@
                     <div class="small-8 columns"><h6>Session 2</h6></div>
                 </div>
                 <div class="row">
-                    <div class="small-4 columns"><h6>6.45 pm</h6></div>
+                    <div class="small-4 columns"><h6>7.00 pm</h6></div>
                     <div class="small-8 columns"><h6>Break</h6></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>7.00 pm</h6></div>
+                    <div class="small-4 columns"><h6>7.15 pm</h6></div>
                     <div class="small-8 columns"><h6>Session 3</h6></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>7.30 pm</h6></div>
+                    <div class="small-4 columns"><h6>8.00 pm</h6></div>
                     <div class="small-8 columns"><h6>Session 4</h6></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>8.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Session 5</h6></div>
+                    <div class="small-4 columns"><h6>8.45 pm</h6></div>
+                    <div class="small-8 columns"><h6>Lightning Session</h6></div>
                 </div>
                 <div class="row">
-                    <div class="small-4 columns"><h6>8.30 pm</h6></div>
+                    <div class="small-4 columns"><h6>9.00 pm</h6></div>
                     <div class="small-8 columns"><h6>Networking &amp; Dinner</h6></div>
                 </div>
             </div>
