--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <div class="about section" id="about">
             <div class="row">
                 <div class="large-12 columns social">
-                    <a href="#"><i class="foundicon-facebook"></i></a>
-                    <a href="#"><i class="foundicon-twitter"></i></a>
-                    <a href="#"><i class="foundicon-thumb-up"></i></a>
+                    <a href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank"><i class="foundicon-thumb-up"></i></a>
+                    <a href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="foundicon-facebook"></i></a>
+                    <a href="https://twitter.com/intent/tweet?url=twchennai.github.io/geeknight&text=Whats+up&hashtags=geeknightchennai" target="_blank"><i class="foundicon-twitter"></i></a>
                     <a href="#"><i class="foundicon-youtube"></i></a>
                 </div>
             </div>
@@ -172,7 +172,8 @@
                         ThoughtWorks Technologies Pvt Ltd, <br />
                         9th Floor, Phase 3 <br />
                         Ascendas International Tech Park <br />
-                        Taramani, Chennai
+                        Taramani, Chennai <br />
+                        <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank">Open in Google Maps</a></small>
                     </h6>
                 </div>
             </div>
