--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!--[if lte IE 8]>
             <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
         <![endif]-->
+        <script>var targetDate = new Date("Oct 29 2013 17:00")</script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -61,7 +62,7 @@
             <div class="row countdown">
                 <div class="small-8 small-offset-2 large-4 large-offset-0 columns date">
                     <h6 class="subheader">4<sup>th</sup> edition</h6>
-                    <h4>oct 24</h4>
+                    <h4>oct 29</h4>
                 </div>
                 <div class="small-6 large-2 columns counter">
                     <h4><span id="days"></span></h4>
@@ -124,7 +125,7 @@
         <div class="agenda section" id="agenda">
             <div class="row">
                 <h2>Agenda</h2>
-                <small>(talks are being finalized, will be updated by end of this week)</small>
+                <small>(sessions are being finalized, will be updated next week)</small>
             </div>
 
             <div class="timings">
