Added speaker registration link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </ul>
                         <ul class="right">
                             <li><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" target="_blank">Participate</a></li>
-                            <li><a href="#speak">Talk</a></li>
+                            <li><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank">Talk</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#agenda">Agenda</a></li>
                             <li><a href="#location">Location</a></li>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="large-5 columns">
                     <h6 class="subheader">submit your</h6>
-                    <h4>Talk</h4>
+                    <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank">Talk</a></h4>
                     <h6 class="subheader"><small>&bull; talks must be technical in nature</small></h6>
                 </div>
             </div>
