Changed some text and added separator styles

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h6 class="subheader">register to</h6>
                     <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank">Participate</a></h4>
                     <h6 class="subheader">
-                        <small>&bull; attendance is free but limited seats, so hurry up!</small>
+                        <small>&bull; free participation &amp; dinner</small>
                     </h6>
                 </div>
                 <div class="large-2 columns">
@@ -113,7 +113,9 @@
 
             <div class="row">
                 <blockquote>
-                    Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>
+                    <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</p>
+
+                    <cite><code>Geek Night Volunteers</code></cite>
                 </blockquote>
             </div>
         </section>
@@ -151,11 +153,16 @@
                 </div>
                 <div class="row talk">
                     <div class="small-4 columns"><h6>8.45 pm</h6></div>
-                    <div class="small-8 columns"><h6>Lightning Session</h6></div>
+                    <div class="small-8 columns"><h6>Lightning Sessions</h6></div>
                 </div>
                 <div class="row">
                     <div class="small-4 columns"><h6>9.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Networking &amp; Dinner</h6></div>
+                    <div class="small-8 columns">
+                        <h6>
+                            Networking &amp; Dinner
+                            <small>(served free at our premises)</small>
+                        </h6>
+                    </div>
                 </div>
             </div>
         </section>
@@ -170,7 +177,7 @@
                         9th Floor, Phase 3 <br />
                         Ascendas International Tech Park <br />
                         Taramani, Chennai <br />
-                        <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank">[ Open in Google Maps ]</a></small>
+                        <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank">&laquo; Open in Google Maps &raquo;</a></small>
                     </h6>
                 </div>
             </div>
