Fix style issues in map

--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
             </div>
 
             <div class="row">
-                <blockquote>
-                    <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</p>
+                <div class="large-12 columns">
+                    <blockquote>
+                        <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</p>
 
-                    <cite><code>Geek Night Volunteers</code></cite>
-                </blockquote>
+                        <cite><code>Geek Night Volunteers</code></cite>
+                    </blockquote>
+                </div>
             </div>
         </section>
 
