Optimize more CSS

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
         </section>
 
-        <div id="map"></div>
+        <div id="map" class="hide"></div>
 
         <script src="js/ticker.js"></script>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
