--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
         <div id="map" class="hide"></div>
 
         <script src="js/ticker.js"></script>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+        <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
+            <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
         <![endif]-->
-        <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+        <script src="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
         <script src="js/map.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
