Modernizr for IE compatibility

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/app.css" />
+        <script src="js/custom.modernizr.js"></script>
         <script>var targetDate = new Date("Oct 29 2013 17:00")</script>
     </head>
     <body>
