--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <section id="header" class="feature">
+        <header id="header" class="feature">
             <div class="fixed">
                 <nav class="top-bar">
                     <ul class="title-area">
@@ -43,7 +43,7 @@
                     </section>
                 </nav>
             </div>
-        </section>
+        </header>
 
         <section id="intro" class="feature">
             <div class="row">
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="large-12 columns">
                     <blockquote>
-                        <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</p>
+                        Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media
 
                         <cite><code>Geek Night Volunteers</code></cite>
                     </blockquote>
@@ -187,6 +187,21 @@
         </section>
 
         <div id="map" class="hide"></div>
+
+        <footer id="footer" class="feature">
+            <div class="row">
+                <div class="large-12 columns">
+                    <p>
+                        Geek Night Chennai sponsored by <label><a href="//thoughtworks.com">ThoughtWorks</a></label><br />
+                        Built with
+                        <label><a href="//html5boilerplate.com">HTML5 Boilerplate</a></label>,
+                        <label><a href="//foundation.zurb.com">Zurb Foundation</a></label> &amp;
+                        <label><a href="//leafletjs.com">Leaflet</a></label>
+                    </p>
+                </div>
+            </div>
+        </footer>
+
 
         <script src="js/ticker.js"></script>
         <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
