Better markup, avoid headings everywhere and use paragraphs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script>var targetDate = new Date("Oct 29 2013 17:00")</script>
     </head>
     <body>
-        <!--[if lt IE 7]>
+        <!--[if lte IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
@@ -52,52 +52,50 @@
                         <img src="img/tw-logo.png" alt="ThoughtWorks" align="center" />
                     </a>
                     <h1>Geek Night Chennai</h1>
-                    <h5 class="subheader">an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
+                    <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
                 </div>
             </div>
 
             <div class="row countdown">
                 <div class="small-8 small-offset-2 large-4 large-offset-0 columns date">
-                    <h6 class="subheader">4<sup>th</sup> edition</h6>
+                    <p>4<sup>th</sup> edition</p>
                     <h4>oct 29</h4>
                 </div>
                 <div class="small-6 large-2 columns counter">
                     <h4><span id="days"></span></h4>
-                    <h6 class="subheader">days</h6>
+                    <p>days</p>
                 </div>
                 <div class="small-6 large-2 columns counter">
                     <h4><span id="hours"></span></h4>
-                    <h6 class="subheader">hours</h6>
+                    <p>hours</p>
                 </div>
                 <div class="small-6 large-2 columns counter">
                     <h4><span id="minutes"></span></h4>
-                    <h6 class="subheader">minutes</h6>
+                    <p>minutes</p>
                 </div>
                 <div class="small-6 large-2 columns counter">
                     <h4 id="seconds">
                         &nbsp; <!-- the nbsp is required -->
                         <span id="tick"></span><span id="tock"></span>
                     </h4>
-                    <h6 class="subheader">seconds</h6>
+                    <p>seconds</p>
                 </div>
             </div>
 
             <div class="row actions">
                 <div class="large-5 columns">
-                    <h6 class="subheader">register to</h6>
+                    <p>register to</p>
                     <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank">Participate</a></h4>
-                    <h6 class="subheader">
-                        <small>&bull; free participation &amp; dinner</small>
-                    </h6>
+                    <p><small>&bull; free participation &amp; dinner</small></p>
                 </div>
                 <div class="large-2 columns">
                     <hr class="show-for-small" />
-                    <h5 class="subheader hide-for-small"><br />&laquo; or &raquo;</h5>
+                    <h5 class="hide-for-small"><br />&laquo; or &raquo;</h5>
                 </div>
                 <div class="large-5 columns">
-                    <h6 class="subheader">submit your</h6>
+                    <p>submit your</p>
                     <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank">Talk</a></h4>
-                    <h6 class="subheader"><small>&bull; talks must be technical in nature</small></h6>
+                    <p><small>&bull; talks must be technical in nature</small></p>
                 </div>
             </div>
         </section>
@@ -115,7 +113,7 @@
             <div class="row">
                 <div class="large-12 columns">
                     <blockquote>
-                        Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media
+                        <h6>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</h6>
 
                         <cite><code>Geek Night Volunteers</code></cite>
                     </blockquote>
@@ -126,45 +124,45 @@
         <section id="agenda" class="feature">
             <div class="row">
                 <h2>Agenda</h2>
-                <small>(sessions are being finalized, will be updated next week)</small>
+                <p><small>(sessions are being finalized, will be updated next week)</small></p>
             </div>
 
             <div class="timings">
                 <div class="row">
-                    <div class="small-4 columns"><h6>5.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Introduction</h6></div>
+                    <div class="small-4 columns"><p>5.00 pm</p></div>
+                    <div class="small-8 columns"><p>Introduction</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>5.30 pm</h6></div>
-                    <div class="small-8 columns"><h6>Session 1</h6></div>
+                    <div class="small-4 columns"><p>5.30 pm</p></div>
+                    <div class="small-8 columns"><p>Session 1</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>6.15 pm</h6></div>
-                    <div class="small-8 columns"><h6>Session 2</h6></div>
+                    <div class="small-4 columns"><p>6.15 pm</p></div>
+                    <div class="small-8 columns"><p>Session 2</p></div>
                 </div>
                 <div class="row">
-                    <div class="small-4 columns"><h6>7.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Break</h6></div>
+                    <div class="small-4 columns"><p>7.00 pm</p></div>
+                    <div class="small-8 columns"><p>Break</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>7.15 pm</h6></div>
-                    <div class="small-8 columns"><h6>Session 3</h6></div>
+                    <div class="small-4 columns"><p>7.15 pm</p></div>
+                    <div class="small-8 columns"><p>Session 3</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>8.00 pm</h6></div>
-                    <div class="small-8 columns"><h6>Session 4</h6></div>
+                    <div class="small-4 columns"><p>8.00 pm</p></div>
+                    <div class="small-8 columns"><p>Session 4</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><h6>8.45 pm</h6></div>
-                    <div class="small-8 columns"><h6>Lightning Sessions</h6></div>
+                    <div class="small-4 columns"><p>8.45 pm</p></div>
+                    <div class="small-8 columns"><p>Lightning Sessions</p></div>
                 </div>
                 <div class="row">
-                    <div class="small-4 columns"><h6>9.00 pm</h6></div>
+                    <div class="small-4 columns"><p>9.00 pm</p></div>
                     <div class="small-8 columns">
-                        <h6>
+                        <p>
                             Networking &amp; Dinner
                             <small>(served free at our premises)</small>
-                        </h6>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -191,13 +189,13 @@
         <footer id="footer" class="feature">
             <div class="row">
                 <div class="large-12 columns">
-                    <p>
+                    <p><small>
                         Geek Night Chennai sponsored by <label><a href="//thoughtworks.com">ThoughtWorks</a></label><br />
                         Built with
                         <label><a href="//html5boilerplate.com">HTML5 Boilerplate</a></label>,
                         <label><a href="//foundation.zurb.com">Zurb Foundation</a></label> &amp;
                         <label><a href="//leafletjs.com">Leaflet</a></label>
-                    </p>
+                    </small></p>
                 </div>
             </div>
         </footer>
