Subtle background patterns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title></title>
+        <title>Geek Night Chennai</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="large-12 columns">
                     <a href="http://www.thoughtworks.com" target="_blank">
-                        <img src="img/tw-logo.png" alt="ThoughtWorks" align="center" />
+                        <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                     </a>
                     <h1>Geek Night Chennai</h1>
                     <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
@@ -160,7 +160,7 @@
                     <div class="small-4 columns"><p>9.00 pm</p></div>
                     <div class="small-8 columns">
                         <p>
-                            Networking &amp; Dinner
+                            Networking &amp; Dinner <br class="show-for-small" />
                             <small>(served free at our premises)</small>
                         </p>
                     </div>
@@ -174,7 +174,7 @@
 
                 <div id="address">
                     <h6>
-                        ThoughtWorks Technologies Pvt Ltd, <br />
+                        ThoughtWorks Technologies Pvt Ltd<br />
                         9th Floor, Phase 3 <br />
                         Ascendas International Tech Park <br />
                         Taramani, Chennai <br />
